--- a/register.html
+++ b/register.html
@@ -70,9 +70,13 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="plan"><span class="req">* </span> Plan: </label>
-                    <input class="form-control" placeholder="Enter plan" required type="text" name="plan" id="plan" />
-                </div>
+                    <label for="plan">Select plan:</label>
+                    <select class="form-control" id="plan">
+                      <option>₹1399</option>
+                      <option>₹2199</option>
+                      <option>₹4999</option>
+                    </select>
+                  </div>
                 <div class="form-group">
                     <label for="description"><span class="req">* </span> Description:<small> Max 200 characters</small>
                     </label>
