--- a/profile.html
+++ b/profile.html
@@ -36,30 +36,30 @@
                 <img src="images/img_avatar.png" alt="Avatar" class="avatar">
               </div>
               <div class="form-group">
-              <label>First Name:</label> <b><span data-key="firstname"></span></b>
+                <label>First Name:</label>
               </div> <!-- form-group.// -->
               <div class="form-group">
-                <label>Last Name:</label><b><span data-key="lastname"></span></b>
+                <label>Last Name:</label>
               </div> <!-- form-group.// -->
               <div class="form-group">
-              <label>User ID:</label> <b><span data-key="id"></span></b>
+                <label>User ID:</label>
               </div> <!-- form-group.// -->
               <div class="form-group">
-                <label>Email Address:</label><b><span data-key="email"></span></b>
+                <label>Email Address:</label>
               </div> <!-- form-group.// -->
               <div class="form-group">
-                <label>Phone number:</label><b><span data-key="phone"></span></b>
+                <label>Phone number:</label>
               </div> <!-- form-group.// -->
               <div class="form-group">
-                <label>Plan:</label><b><span data-key="plan"></span></b>
+                <label>Plan:</label>
               </div> <!-- form-group.// -->
               <div class="form-group">
-                <label>Description:</label><b><span data-key="description"></span></b>
+                <label>Description:</label>
               </div> <!-- form-group.// -->
               <div class="split-buttons">
                 <button class="btn btn-primary confirm" type="button" onclick="document.getElementById('id01').style.display='block'">
                   Start a new fundraiser </button>
-                <button class="btn btn-back confirm" type="button"><a href="javascript:logout()">Logout</a> </button>
+                <button class="btn btn-back confirm" type="button"><a href="index.html">Logout</a> </button>
               </div>
             </form>
           </div> <!-- tab-pane.// -->
@@ -152,17 +152,15 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
     crossorigin="anonymous"></script>
   <script>
-    // $('#cleardemo').filestyle({
-    //   buttonText: ' Choose a file from System',
-    //   buttonName: 'btn-info'
-    // });
+    $('#cleardemo').filestyle({
+      buttonText: ' Choose a file from System',
+      buttonName: 'btn-info'
+    });
 
     $('#clear').click(function () {
       $('#cleardemo').filestyle('clear');
     });                   
   </script>
-  <script src="js/index.js"></script>
-  <script>loadProfile()</script>
 </body>
 
 </html>
