--- a/profile.html
+++ b/profile.html
@@ -36,62 +36,36 @@
                 <img src="images/img_avatar.png" alt="Avatar" class="avatar">
               </div>
               <div class="form-group">
-              <label>First Name:</label> <b><span data-key="firstname"></span></b>
+                <label>First Name:</label>
               </div> <!-- form-group.// -->
               <div class="form-group">
-                <label>Last Name:</label><b><span data-key="lastname"></span></b>
+                <label>Last Name:</label>
               </div> <!-- form-group.// -->
               <div class="form-group">
-              <label>User ID:</label> <b><span data-key="id"></span></b>
+                <label>User ID:</label>
               </div> <!-- form-group.// -->
               <div class="form-group">
-                <label>Email Address:</label><b><span data-key="email"></span></b>
+                <label>Email Address:</label>
               </div> <!-- form-group.// -->
               <div class="form-group">
-                <label>Phone number:</label><b><span data-key="phone"></span></b>
+                <label>Phone number:</label>
               </div> <!-- form-group.// -->
               <div class="form-group">
-                <label>Plan:</label><b><span data-key="plan"></span></b>
+                <label>Plan:</label>
               </div> <!-- form-group.// -->
               <div class="form-group">
-                <label>Description:</label><b><span data-key="description"></span></b>
+                <label>Description:</label>
               </div> <!-- form-group.// -->
               <div class="split-buttons">
                 <button class="btn btn-primary confirm" type="button" onclick="document.getElementById('id01').style.display='block'">
                   Start a new fundraiser </button>
-                <button class="btn btn-back confirm" type="button"><a href="javascript:logout()">Logout</a> </button>
+                <button class="btn btn-back confirm" type="button"><a href="index.html">Logout</a> </button>
               </div>
             </form>
           </div> <!-- tab-pane.// -->
 
           <div class="tab-pane fade" id="nav-tab-fundraiser">
             <div class="card-columns">
-              <div class="card p-3">
-                <img class="card-img-top" src="images/7.jpg" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title card-heading">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                  <p class="card-text">Funded: 500000/1000000</p>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%"
-                      aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
-                  </div>
-                </div>
-              </div>
-              <div class="card p-3">
-                <img class="card-img-top" src="images/8.jpg" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title card-heading">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                  <p class="card-text">Funded: 58260/233040</p>
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 25%"
-                      aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-                  </div>
-                </div>
-              </div>
               <div class="card p-3">
                 <img class="card-img-top" src="images/10.jpg" alt="Card image cap">
                 <div class="card-body">
@@ -120,6 +94,8 @@
       </div>
       <h2 class="heading">NEW FUNDRAISER</h2>
       <div class="container">
+        <label for="user"><b>Username:</b></label>
+        <input type="text" placeholder="Enter Username" name="user" required>
         <label for="title"><b>Title:</b></label>
         <input type="text" placeholder="Enter Title" name="title" required>
         <label for="amount"><b>Amount:</b></label>
@@ -152,17 +128,15 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
     crossorigin="anonymous"></script>
   <script>
-    // $('#cleardemo').filestyle({
-    //   buttonText: ' Choose a file from System',
-    //   buttonName: 'btn-info'
-    // });
+    $('#cleardemo').filestyle({
+      buttonText: ' Choose a file from System',
+      buttonName: 'btn-info'
+    });
 
     $('#clear').click(function () {
       $('#cleardemo').filestyle('clear');
     });                   
   </script>
-  <script src="js/index.js"></script>
-  <script>loadProfile()</script>
 </body>
 
 </html>
