--- a/register.html
+++ b/register.html
@@ -31,14 +31,14 @@
 
                 <div class="form-group">
                     <label for="firstname"><span class="req">* </span> First name: </label>
-                    <input class="form-control" placeholder="First Name" type="text" name="First Name" id="firstname" onkeyup="Validate(this)"
+                    <input class="form-control" placeholder="First Name" type="text" name="firstname" id="firstname" onkeyup="Validate(this)"
                         required />
                     <div id="errFirst"></div>
                 </div>
 
                 <div class="form-group">
                     <label for="lastname"><span class="req">* </span> Last name: </label>
-                    <input class="form-control" type="text" name="Last Name" id="lastname" onkeyup="Validate(this)"
+                    <input class="form-control" type="text" name="lastname" id="lastname" onkeyup="Validate(this)"
                         placeholder="Last Name" required />
                     <div id="errLast"></div>
                 </div>
