--- a/payment.html
+++ b/payment.html
@@ -53,7 +53,7 @@
                                 </div>
                             </div> <!-- form-group.// -->
                             <div class="form-group">
-                                <label for="username">Amount in ₹:</label>
+                                <label for="username">Amount:</label>
                                 <input type="text" class="form-control" name="amount" placeholder="" required="">
                             </div> <!-- form-group.// -->
                             <div class="row">
@@ -75,8 +75,8 @@
                                 </div>
                             </div> <!-- row.// -->
                             <div class="split-buttons">
-                                <button class="btn btn-primary confirm confirm1" type="button"><a href="index.html">Confirm</a></button>
-                                <button class="btn btn-back confirm" type="button"><a href="index.html" class="back">Back</a>
+                                <button class="btn btn-primary confirm" type="button"><a href="index.html">Confirm</a> </button>
+                                <button class="btn btn-back confirm" type="button"><a href="index.html">Back</a>
                                 </button>
                             </div>
                         </form>
